deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-deployment
spec:
  replicas: 3  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app-container
          image: game-2048:latest  # Use your actual Docker image name and tag
          ports:
            - containerPort: 35000  # The port your React app is listening on

---
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 80  # The port exposed by the service within the cluster
      targetPort: 35000  # The port your React app is listening on inside the pod
  type: NodePort
